# SmartOlderMonitor

./: BUILD.gn
drivers/sensors/max30102/: kalman.c  kalman.h  max30102.c  max30102.h
drivers/sensors/mpu6050/: mpu6050.c  mpu6050.h
drivers/wifi/: bsp_wifi.c  bsp_wifi.h
include/: used_iot_cd.h
src/: main.c  mpu6050_demo.c
